src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Deal_Opening_Date_2__c</fullName>
        <formula>TEXT(Day( Opening_date__c ))+&quot;/&quot;+TEXT(Month(Opening_date__c ))+&quot;/&quot;+TEXT(Year(Opening_date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Opening Date 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Products__c</fullName>
        <label>Deal Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Region__c</fullName>
        <label>Deal Region</label>
        <picklist>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Revenue__c</fullName>
        <label>Digital Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Group__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Digital__c</fullName>
        <label>MigDigital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>(Usual_Selling_Price__c - Amount) /  Usual_Selling_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Display_Deal_Title__c</fullName>
        <label>Display Deal Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_ROP__c</fullName>
        <label>MigDisplay ROP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ecomm_Sub_Category__c</fullName>
        <description>Wowcher Ecomm Record type field for managers only</description>
        <label>Ecomm Sub-Category</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diet Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footwear &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming &amp; Betting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewellery &amp; Perfume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kitchen Wares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalised Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Edit_Products__c</fullName>
        <formula>HYPERLINK(&apos;/oppitm/multilineitem.jsp?oppId=&apos;&amp;Id&amp;&apos;&amp;retURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c&amp;&apos;&amp;saveURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c, IMAGE(&apos;/resource/Edit&apos;, &apos;Edit All Products&apos;),&apos;_self&apos;)</formula>
        <label>Edit Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Opportunity_Value__c</fullName>
        <description>An estimated amount entered by user</description>
        <label>Estimated Total Opportunity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <inlineHelpText>Enter the number of day or months here.</inlineHelpText>
        <label>Expiry/Redemption period (days/months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Value__c</fullName>
        <label>Expiry Value</label>
        <picklist>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Insertion_Date__c</fullName>
        <label>MigFirst Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followup_Due_Date__c</fullName>
        <label>Followup Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followup_Reminder__c</fullName>
        <label>Followup Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Followup_Subject__c</fullName>
        <label>Followup Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Ad_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Free Ad Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Ad__c</fullName>
        <label>Free Ad</label>
        <picklist>
            <picklistValues>
                <fullName>Added value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Contract value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friendly_Deal_Title__c</fullName>
        <label>Deal Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <formula>Minimum_Deal_Product_Price__c *  Predicted_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Children__c</fullName>
        <label>Has Children</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hide_Merchant_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Merchant Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndClassLvl1__c</fullName>
        <label>Classified - Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homes &amp; Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noticeboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal &amp; Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Display - Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics &amp; Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment &amp; Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Games &amp; Consoles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening &amp; Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt,social,political Organis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Appliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Equipment &amp; Diy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Fmcg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Advertisers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Equipment &amp; Stationery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Drink</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is new business?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mock_Up_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by Metro</description>
        <label>Is Mock-Up Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_An_Amended_Order_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wowcher</description>
        <label>Is This An Amended Order Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Insertion_Date__c</fullName>
        <label>MigLast Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Name__c</fullName>
        <label>Lead Record Type Name</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wowcher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_time_on_additional_stock_weeks__c</fullName>
        <label>Lead time on additional stock (weeks)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_time_on_shipping_days__c</fullName>
        <label>Lead time on shipping (days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Activity already booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity discussed as value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Pulled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business titles only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign date moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Date moved Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not use online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn’t Use Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial/Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free/House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idea Not Suited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to A&amp;N Media Brand Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to DR/Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed a tactical opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Campaign Targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Creative Solutions booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Final Decision Before Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Solutions booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not core to activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed to classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pops only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quals only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong target audience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_to_which_Competitor__c</fullName>
        <label>Lost to which Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>City AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express - Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror Saturday - We Love Telly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Saturday - Hot Tv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday - Ok Extra/Take 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Times Saturday- Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Listings/ Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Weekend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent &amp; I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday (B/t)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday - Review (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday(B/bl)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday - Observer Mag (A4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MD_Contact_Text__c</fullName>
        <formula>(Contact__r.FirstName)&amp;&quot; &quot;&amp; (Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD Contact Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohabiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <inlineHelpText>INBOUND: Needs matched using FAB’s Product / Platform / Ad 
OUTBOUND: Needs matched using FAB’s Product / Platform / Ad</inlineHelpText>
        <label>Match</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Media_surcharge__c</fullName>
        <description>What extra commision percentage will wowcher take if the deal has an advertising push</description>
        <label>Media surcharge</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Merchant_CS_Information__c</fullName>
        <formula>Account.Merchant_CS_Information__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchant CS Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Liaison__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Liaison</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile_Name__c</field>
                <operation>contains</operation>
                <value>Wowcher</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MigDataMigrationRef__c</fullName>
        <label>MigDataMigrationRef</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MigPartner__c</fullName>
        <label>MigPartner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_reference_no__c</fullName>
        <label>Migration reference no</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Deal_Product_Price__c</fullName>
        <label>Minimum Deal Product Price</label>
        <summarizedField>Deal_Product__c.Product_price__c</summarizedField>
        <summaryForeignKey>Deal_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minimum_Product_Wowcher_Commission__c</fullName>
        <description>For Wowcher: This is the Wowcher Commission for the Min Deal Price.</description>
        <label>Minimum Product Wowcher Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Must_redeem__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Must redeem?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mystery_Phonecall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mystery Phonecall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <formula>Gross_Revenue__c *  Minimum_Product_Wowcher_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_To_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wowcher Field &apos;New to Market&apos; 
If ticked then &apos;Is New Business&apos; will be ticked</description>
        <label>New To Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Deal_Products__c</fullName>
        <description>Wowcher</description>
        <label>No Of Deal Products</label>
        <summaryForeignKey>Deal_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Rooms__c</fullName>
        <description>Wowcher Field</description>
        <label>Number Of Rooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <description>INBOUND: London Classified greeting 
OUTBOUND: CAB</description>
        <inlineHelpText>INBOUND: London Classified greeting 
OUTBOUND: CAB</inlineHelpText>
        <label>Open</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opening_date__c</fullName>
        <inlineHelpText>Enter the earliest date deal can run.</inlineHelpText>
        <label>Deal Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_Date__c</fullName>
        <label>Opportunity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expiry_Date__c</fullName>
        <description>Wowcher</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Ref_Id__c</fullName>
        <description>This is a sequential number to identify the Opportunity</description>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>Opportunity Ref Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Start_Date__c</fullName>
        <label>Opportunity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_To_Order__c</fullName>
        <formula>HYPERLINK(
&apos;/apex/OpportunityToOrder?oppId=&apos;&amp;Id&amp;&apos;&amp;retURL=apex/OpportunityToOrder&apos;
, 
IMAGE(&apos;/resource/OpportunityToOrder&apos;, &apos;Opportunity to Order&apos;)
,
&apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity To Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>The Lead Mapping Process will map the Opportunity Type field. This will be used to determine the Opportunity Record Type for the Opportunity being created.</description>
        <label>Pitch Type</label>
        <picklist>
            <picklistValues>
                <fullName>ECommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InStore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_form_recipient__c</fullName>
        <label>Order form recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <label>Other Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Merchant_Screenshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Our Merchant Screenshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owners_Department__c</fullName>
        <defaultValue>$Setup.ConstantsH__c.Department__c</defaultValue>
        <label>Owner&apos;s Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2_ANL_Commission_rate__c</fullName>
        <label>P2 ANL Commission rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Lead Ad Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <formula>$Setup.Wowcher_User_Setting__c.Patch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>In-store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped 33%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collected 33%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phonecall_Date_And_Time__c</fullName>
        <label>Phonecall Date And Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pitch_Contact_ID__c</fullName>
        <label>Pitch Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_Contact_Name__c</fullName>
        <label>Pitch Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_Contact_Phone__c</fullName>
        <label>Pitch Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pitch_Count_On_Opp__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pitch Count On Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>